WORDNOTIF-4: Receive a notification when a watched word is removed
  * Provide a dedicated event for removed word
  * Provide dedicated notification system for removed word